--- a/palindrome.html
+++ b/palindrome.html
@@ -7,5 +7,16 @@
     </head>
     <body>
         <h1>パリンドロームテスター</h1>
+
+        <form id="palindromeTester">
+            <textarea name="phrase" rows="10" cols="30"></textarea>
+            <br>
+            <button id="submit">パリンドロームかどうかチェックする</button>
+        </form>
+        
+        <h2>結果</h2>
+
+        <p id="palindromeResult"></p>
+        
     </body>
 </html>
